
package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test",
    srcs = [
        "test.cpp",
    ],
    linkopts = [
    #    "-ludev", <<--- works around
    ],
    dynamic_deps = select({
        "@rules_libusb//:force_dynamic_linkage_enabled": ["@libusb//:libusb_dynamic"],
        "//conditions:default": [],
    }),
    deps = [
        "@libusb",
    ],
)
