module(
    name = "libusb-test",
    version = "2.1.1",
)

bazel_dep(name = "rules_libusb", version = "0.1.0-rc1")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "platforms", version = "0.0.10")

libusb = use_extension("@rules_libusb//:extensions.bzl", "libusb")
libusb.source_release(min_version = "1.0.22")
use_repo(libusb, "libusb")
